# perso-prompts

./: .gitignore  CLAUDE.md  README.md
vul-management/: Rippling-Vuln-Dashboard.md  SCA-Scanner.md  (+1 more)
vul-management/SCA/implementation/: .gitignore  Decision-Audit-Conversation-Log.md  Docker-Accurate-Scanner-Design.md  Docker-CVE-Resolution-Strategy.md  Docker-Ideation-Summary.md  Docker-Known-Limitations.md  Docker-Layer-CVE-Mapping.md  Docker-Parser-Design.md  Docker-Parser-Validation-PDR.md  Python-Parser-Validation-PDR.md  README.md  Strategic-Focus-Code-Not-Infrastructure.md  WIP-Data-Completeness-vs-Practical-Utility.md  analyze_remaining_gaps.py  cross_model_variance_results.json  cross_model_year_test_results.json  cve_repeatability_analysis.json  debug_missing_packages.py  deep_cve_variance_analysis.json  model-comparison-report.md  pyproject.toml  quick_convergence_results.json  reasoning_guidance_test_results.json  rippling_simple_test_results.json  run_tests.py  structured_prompt_battle_results.json  test_cross_model_variance.py  test_cve_repeatability.py  test_cve_variance_deep.py  test_decision_convergence.py  test_decision_convergence_quick.py  test_docker_parser.py  test_js_real_world.py  test_reasoning_guidance.py  test_rippling_real_world.py  test_rippling_simple.py  test_structured_prompt_battle.py  test_structured_prompt_simple.py  test_year_search_approaches.py  test_year_search_cross_model.py  (+2 more)
vul-management/SCA/implementation/parser-validation/: javascript_parser_validation_report.json  python_parser_compatibility_report.json
vul-management/SCA/implementation/parser-validation/common/: __init__.py  extractor_base.py  test_format.py  validator_base.py
vul-management/SCA/implementation/parser-validation/languages/docker/: __init__.py
vul-management/SCA/implementation/parser-validation/languages/docker/test-data/: __init__.py
vul-management/SCA/implementation/parser-validation/languages/docker/test-data/dockerfile/: base_images.yaml  language_packages.yaml  system_packages.yaml
vul-management/SCA/implementation/parser-validation/languages/docker/validators/: __init__.py  docker_parser_validator.py
vul-management/SCA/implementation/parser-validation/languages/javascript/sources/: npm_semver.py
vul-management/SCA/implementation/parser-validation/languages/javascript/test-data/npm-semver/: version_constraints.yaml
vul-management/SCA/implementation/parser-validation/languages/javascript/validators/: javascript_parser_validator.py
vul-management/SCA/implementation/parser-validation/languages/python/: __init__.py
vul-management/SCA/implementation/parser-validation/languages/python/sources/: pip_tools.py
vul-management/SCA/implementation/parser-validation/languages/python/validators/: python_parser_validator.py
vul-management/SCA/implementation/parser-validation/scripts/: analyze_parser_issues.py  test_javascript_validation.py  test_pip_tools_extraction.py  test_python_gap_analysis.py  test_python_validation.py
vul-management/SCA/implementation/src/sca_ai_scanner/: __init__.py  __main__.py  cli.py  exceptions.py
vul-management/SCA/implementation/src/sca_ai_scanner/config/: __init__.py  manager.py
vul-management/SCA/implementation/src/sca_ai_scanner/core/: client.py  models.py  optimizer.py  validator.py
vul-management/SCA/implementation/src/sca_ai_scanner/formatters/: __init__.py  json_output.py  markdown_report.py
vul-management/SCA/implementation/src/sca_ai_scanner/parsers/: __init__.py  base.py  docker.py  javascript.py  python.py
vul-management/SCA/implementation/tests/: __init__.py  conftest.py
vul-management/SCA/implementation/tests/integration/: test_end_to_end.py
vul-management/SCA/implementation/tests/unit/: test_ai_client.py  test_cli.py  test_dependency_parsers.py  test_models.py  test_package_execution.py  test_token_optimizer.py
(+19 files in other folders)
